--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -17,12 +17,14 @@ services:
         target: /var/www/html/node_modules
     restart: "no"
     command: sh run.sh
+    depends_on:
+      - mongo
 
   mongo:
     restart: on-failure
     container_name: mongo-db
     image: mongo
     volumes:
-      - /var/www/jumia-bot/data:/data/db
+      - ./database:/data/db
     ports:
       - "27072:27017"
